oxifft-codegen/tests/compile_fail/gen_odd_unknown_size.rs
use oxifft_codegen::gen_odd_codelet;

gen_odd_codelet!(99);

fn main() {}
